# python-interview

./: README.md  pyproject.toml
.github/: dependabot.yml
credit_score_calculator/: credit_score_calculator.py
credit_score_calculator/tests/: test_credit_score_calculator.py
