[tool.poetry]
name = "python-interview-2"
version = "0.1.0"
description = ""
authors = ["raphaella-rose <raphaella.rose1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
