[tool.poetry]
name = "credit_score_calculator"
version = "0.1.0"
description = ""
authors = ["Raphaella D'Alessandro", "Amina Layco"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
